seperate rwa and rpc