@@ -69,6 +69,11 @@
             <artifactId>axis2-json</artifactId>
             <version>${axis2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.axis2</groupId>
+            <artifactId>axis2-xmlbeans</artifactId>
+            <version>${axis2.version}</version>
+        </dependency>
         
         <!-- test -->
         <dependency>
@@ -89,22 +94,12 @@
             <plugin>
                 <groupId>org.apache.axis2</groupId>
                 <artifactId>axis2-mar-maven-plugin</artifactId>
-                <version>1.6.1</version>
+                <version>${axis2.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.axis2</groupId>
                 <artifactId>axis2-aar-maven-plugin</artifactId>
-                <version>1.6.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-java2wsdl-maven-plugin</artifactId>
-                <version>1.6.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.axis2</groupId>
-                <artifactId>axis2-wsdl2code-maven-plugin</artifactId>
-                <version>1.6.1</version>
+                <version>${axis2.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -252,4 +247,83 @@
             </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>java2wsdl</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-java2wsdl-maven-plugin</artifactId>
+                        <version>${axis2.version}</version>
+                        <configuration>
+                            <className>com.bulain.axis.demo.DemoService</className>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>java2wsdl</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>wsdl2code</id>
+            <build>
+                <plugins>      
+                    <plugin>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-wsdl2code-maven-plugin</artifactId>
+                        <version>${axis2.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>wsdl2code</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <wsdlFile>src/main/webapp/WEB-INF/wsdl/DemoService.wsdl</wsdlFile>
+                            <databindingName>adb</databindingName>
+                            <packageName>com.bulain.axis.demo</packageName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>it</id>
+            <build>
+                <plugins>
+                   <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <configuration>
+                            <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+                            <scanIntervalSeconds>10</scanIntervalSeconds>
+                            <stopKey>foo</stopKey>
+                            <stopPort>9999</stopPort>
+                            <useTestClasspath>true</useTestClasspath>
+                            <webAppConfig>
+                                <contextPath>/axis2-demo</contextPath>
+                            </webAppConfig>
+                            <connectors>
+                                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                                    <port>8082</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
 </project>
